Getting touch input from ADB. Getting X and Y values and printing to the GUI. Will be used for automating touch gestures